# projekt-zaawansowane-wzorce-projektowe-i-architektoniczne

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
cart_manager/: main.py
docs/: classes.dot  looseNotes.md  wzorce.md
templates/: acceptClientRequestPage.html  acceptSupplyOfferForRequest.html  accountCreatedPage.html  base.html  createAccountPage.html  createClientRequestPage.html  createSupplyOfferPage.html  createSupplyRequestPage.html  editUserRolesPage.html  landingPage.html  listAllClientRequestsPage.html  listAllTransportRequests.html  listOwnClientRequestsPage.html  listSupplyOffersForRequest.html  listSupplyRequests.html  listTransportOffersForRequest.html  loginPage.html  navigation.html  personalizedLandingPage.html  userRolesPage.html
templates/client/: acceptClientRequestPage.html  createClientRequestPage.html  listAllClientRequestsPage.html
templates/product/: listProducts.html  productDetails.html
templates/retail/: cartView.html  checkoutForm.html  listOrders.html  listProducts.html  orderView.html
templates/supply/: listSupplyRequests.html
templates/transport/: listAllTransportRequests.html  listTransportOffersForRequest.html  listTransports.html  transportView.html
templates/user/: accountCreatedPage.html  createAccountPage.html  editUserRolesPage.html
tests/: fixtures.py  test_case_with_database.py  test_client_request.py  test_supply.py  test_transport.py  test_user.py
zwpa/: UserAuthenticationResult.py  UserAuthorizationResult.py  config.py  main.py  model.py  types.py  user.py
(+73 files in other folders)
