[tool.poetry]
name = "zwpa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
bcrypt = "^4.0.1"
sqlalchemy = "^2.0.23"
testcontainers = {extras = ["postgresql"], version = "^3.7.1"}
pytest = "^7.4.3"
psycopg2 = "^2.9.9"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
faker = "^21.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
